--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -14,6 +14,7 @@
   h3  {
     
     font-size: 24px;
+    line-height: 37px;
   }
 
   p {
